--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
 <!DOCTYPE html>
-<meta http-equiv="refresh" content="0; url=92.htm">
+<html lang="fa">
+<head>
+  <meta charset="UTF-8">
+  <title>کتاب من</title>
+  <style>
+    html,body{margin:0;height:100%}
+    iframe{border:0;width:100%;height:100%}
+  </style>
+</head>
+<body>
+  <iframe src="92.htm"></iframe>
+</body>
+</html>
